# neu_cloud

./: .gitignore  .gitignore.swp  CMakeLists.txt  package.xml  readme.md
launch/: cloud_client.launch~
scripts/: bridge (copy).py  bridge.py  bridge.py~  client.py  clientlib.py  clientlib.py~  cloud_server (copy).py  cloud_server.py~
srv/: call.srv
